Working to fix scrollbar issue

--- a/src/components/Portfolio/PortfolioComp.css
+++ b/src/components/Portfolio/PortfolioComp.css
@@ -79,7 +79,6 @@
     border: solid rgb(255, 255, 255) 2px;
     border-radius: 13px;
     padding: 15px;
-    overflow-y: scroll;
     min-width: 250px;
     max-width: 325px;
     height: 390px;
